--- a/index.html
+++ b/index.html
@@ -43,7 +43,31 @@
 
     <div class="container pt-5 mt-5">
         <main role="main" class="pb-3">
-            
+            <div class="container">
+    <div class="row my-5 py-5 justify-content-center">
+        <div class="col-lg-8 col-md-12 mt-5 pt-5">
+            <img class="img-fluid" src="res/imgs/RESISTORM_logo_trans_1.png" />
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-6 text-center">
+            <p class="txt--white fs-3 font--outfit">
+                Snelle en efficiënte oplossingen die je verder helpen
+            </p>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+        <div class="col-3 d-grid text-center">
+            <a asp-controller="Services" asp-action="Services" class="btn btn-primary">Bekijk de mogelijkheden</a>
+        </div> 
+        <div class="col-3 d-grid text-center">
+            <a asp-controller="Contact" asp-action="Contact" class="btn btn-primary">Contact opnemen</a>
+        </div>
+    </div>
+
+</div>
+
+<canvas id="canvas" class="bg--canvas vw-100 vh-100"></canvas>
         </main>
     </div>
 
